--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -440,6 +440,15 @@ button > input.sheet-input {
 button[type="action"] {
     border-radius: 5px;
 }
+/* hide spiner in FF number inputs */
+input[type=number]:not(:hover)::-webkit-inner-spin-button,
+input[type=number]:not(:hover)::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number]:not(:hover) {
+    -moz-appearance: textfield;
+}
 
 /* hide/show areas */
 .sheet-expand {
@@ -1548,6 +1557,11 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   grid-column-gap: 2px;
 }
 
+.sheet-mount_gear-subgrid > .sheet-mount_gear-box11 {
+  white-space: nowrap;
+  display: block;
+}
+
 .sheet-mount_gear-subgrid > div {
   display: flex;
   justify-content: space-around;
@@ -1587,6 +1601,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 .sheet-mount_gear-box6 {
   grid-row-start: 4;
   grid-column: 1/5;
+  height: 4em;
 }
 
 .sheet-mount_gear-box7 {
@@ -1607,6 +1622,12 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 .sheet-mount_gear-box10 {
   grid-row-start: 1;
   grid-column-start: 4;
+}
+
+.sheet-mount_gear-box11 {
+  grid-row-start: 2;
+  grid-column: 1/5;
+  justify-content: left;
 }
 
 /* ---------------------------------- Experience/Willpower */
@@ -2163,6 +2184,7 @@ button[type="action"]:focus span {
   color: white;
 }
 
+
 .sheet-dice_pool-grid button[type="action"]:focus {
   background-color: buttonface;
   border-width: 2px;
@@ -2170,6 +2192,7 @@ button[type="action"]:focus span {
   border-color: buttonface;
   border-image: initial;
   padding: 0;
+  color: buttontext;
 }
 
 .sheet-dice_pool-grid button[type="action"]:focus span {
