Revert "Updating URLs adding Image Alien the Roleplaying Game"
This reverts commit f639b1835ee297039486c28f27cc35fd506f2111.

--- a/Alien Roleplaying Game/Alien-Roleplaying-Game.css
+++ b/Alien Roleplaying Game/Alien-Roleplaying-Game.css
@@ -1,6 +1,6 @@
 .sheet-background-wrap {
     background-color: #000000; /* Black */
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Background-Stars.jpg?raw=true");
+    background-image: url("https://s3.amazonaws.com/files.d20.io/images/83962668/aql4wSUsWrVe8vCKDZ0biA/max.jpg?1560542445");
     background-size: cover;
     background-repeat: no-repeat;
     min-width: 1000px;
@@ -9,7 +9,7 @@
 
 .sheet-header-image {
     background-color: #000000; /* Black */
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Header-Weyland-Yutani.png?raw=true");
+    background-image: url("https://s3.amazonaws.com/files.d20.io/images/83962780/wLaJCHNbNqb3qufrt8kMmA/max.png?1560542538");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 20px;
@@ -18,7 +18,7 @@
 
 .sheet-footer-image {
     background-color: #000000; /* Black */
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Footer-Wwyland-Yutani.png?raw=true");
+    background-image: url("https://s3.amazonaws.com/files.d20.io/images/83963842/vHV8mHeJTy1_9qv9lKDS4g/max.png?1560543345");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 10px;
@@ -739,7 +739,7 @@ button[type="roll"].sheet-button-skill:focus {
 .sheet-rolltemplate-alien .sheet-template-base-between {
     height: 35px;
     width: 35px;
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Base-Between.png?raw=true");
+    background-image: url(https://s3.amazonaws.com/files.d20.io/images/87740733/4eYtGQy8lBv64yLyHmmdgA/max.png?1564367828);
     background-size: 100% 100%;
     
 }
@@ -747,28 +747,28 @@ button[type="roll"].sheet-button-skill:focus {
 .sheet-rolltemplate-alien .sheet-template-base-success {
     height: 35px;
     width: 35px;
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Base-Success.png?raw=true");
+    background-image: url(https://s3.amazonaws.com/files.d20.io/images/87740829/LRc0DPeNN9FHiYP_HzoQfQ/max.png?1564367901);
     background-size: 100% 100%;
 }
 
 .sheet-rolltemplate-alien .sheet-template-stress-fail {
     height: 35px;
     width: 35px;
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Stress-Fail.png?raw=true");
+    background-image: url(https://s3.amazonaws.com/files.d20.io/images/87739900/NplRyhIPhIxWYMnzO94flQ/max.png?1564366923);
     background-size: 100% 100%;
 }
 
 .sheet-rolltemplate-alien .sheet-template-stress-between {
     height: 35px;
     width: 35px;
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Stress-Between.png?raw=true");
+    background-image: url(https://s3.amazonaws.com/files.d20.io/images/87740308/KY70aZz89y05m_6Bxn6e5A/max.png?1564367339);
     background-size: 100% 100%;
 }
 
 .sheet-rolltemplate-alien .sheet-template-stress-success {
     height: 35px;
     width: 35px;
-    background-image: url("https://github.com/Roll20/roll20-character-sheets/blob/master/Alien%20Roleplaying%20Game/Images/Stress-Success.png?raw=true");
+    background-image: url(https://s3.amazonaws.com/files.d20.io/images/87740381/pKvEx53UKaLkfHlNYi9HPg/max.png?1564367434);
     background-size: 100% 100%;
 }
 
