change fonts remove comments

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -1,11 +1,12 @@
 * {
-    font-family: arial, sansserif;
+    /*font-family: arial, sansserif;*/
+    /*font-family: 'Gentium Basic', serif;*/
+    font-family: 'Gentium Book Basic', serif;
 }
 
 
 .charsheet {
-	/* background-color: #d8ffcc;*/
-	min-width: 800px;
+		min-width: 800px;
 }
 
 
@@ -31,12 +32,6 @@ input[type=number]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance:textfield;
 }
-/*
-input[type="number"]:hover,
-input[type="number"]:focus {
-    -moz-appearance: number-input;
-}
-*/
 
 
 .sheet-padding-1 {padding: 1px; }
@@ -105,8 +100,7 @@ input.sheet-tab[type="radio"]:checked + span.sheet-tab {
 }
 
 .sheet-subsection {
-	/*border: 1px solid; */
-	border-color: black;
+		border-color: black;
 	margin: 10px;
   padding 5px;
 }
@@ -130,13 +124,9 @@ input.sheet-tab[type="radio"]:checked + span.sheet-tab {
 /* Title grid */
 
 .sheet-title-grid {
-	/* width: 600px;*/
 	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
 	grid-gap: 5px ;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	grid-template-rows: repeat(1, 1fr);
-	/* grid-template-rows: 1fr 1fr 1fr; */
+  grid-template-rows: repeat(1, 1fr);
 	grid-auto-flow: column;
 }
 
@@ -171,8 +161,6 @@ input[type="text"].sheet-title_name {
 }
 
 .sheet-title {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -187,14 +175,10 @@ input[type="text"].sheet-title_name {
 
 
 .sheet-common_header-grid {
-	/* width: 600px;*/
-	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
-	grid-gap: 5px;
-   /*grid-template-columns : repeat(auto-fill, 10em);*/
-	grid-template-rows: repeat(2, 1fr);
-	/* grid-template-rows: 1fr 1fr 1fr; */
-	grid-auto-flow: column;
+		display: grid;
+		grid-gap: 5px;
+    grid-template-rows: repeat(2, 1fr);
+	  grid-auto-flow: column;
 }
 
 .sheet-common_header1 {
@@ -329,8 +313,6 @@ input[type="text"].sheet-common_header {
 
 
 .sheet-common_header {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 4px;
 	margin: 2px;
@@ -339,10 +321,6 @@ input[type="text"].sheet-common_header {
 }
 
 
-/*.sheet-common_header:nth-child(even) {
-	background-color: #444;
-	color: #000;
-}*/
 
 /* ENDE Aufbau des Grids für den Header */
 
@@ -351,14 +329,9 @@ input[type="text"].sheet-common_header {
 /* Sub Grundwerte Allgemein */
 
 .sheet-allgemein-grid {
-	/* width: 600px;*/
-	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
-	grid-gap: 5px;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	/* grid-template-rows: repeat(8, 1fr ); */
-	grid-template-columns: 1fr 3fr 1fr 3fr;
-	/* grid-auto-flow: column; */
+		display: grid;
+	  grid-gap: 5px;
+  	grid-template-columns: 1fr 3fr 1fr 3fr;
 }
 
 
@@ -667,8 +640,6 @@ input[type="text"].sheet-allgemein  {
 }
 
 .sheet-allgemein {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -680,19 +651,12 @@ input[type="text"].sheet-allgemein  {
 /* Sub Grundwerte Eigenschaften */
 
 .sheet-eigenschaften-grid {
-	/* width: 600px;*/
-	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
-	grid-gap: 5px;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	/* grid-template-rows: repeat(8, 1fr ); */
-	grid-template-columns: 10em 6em 6em 6em  4em auto;
-	/* grid-auto-flow: column; */
+		display: grid;
+		grid-gap: 5px;
+  	grid-template-columns: 10em 6em 6em 6em  4em auto;
 }
 
 .sheet-eigenschaft {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -705,32 +669,20 @@ input[type="text"].sheet-allgemein  {
 /* Sub Grundwerte abgeleitete Eigenschaften */
 
 .sheet-abgeleitete-eigenschaften-grid {
-	/* width: 600px;*/
 	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
 	grid-gap: 5px;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	/* grid-template-rows: repeat(8, 1fr ); */
 	grid-template-columns: repeat(8, 1fr);;
-	/* grid-auto-flow: column; */
 }
 
 .sheet-abgeleitete-eigenschaften2-grid {
-	/* width: 600px;*/
 	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
 	grid-gap: 5px;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	/* grid-template-rows: repeat(8, 1fr ); */
 	grid-template-columns: repeat(9, 1fr);;
-	/* grid-auto-flow: column; */
 }
 
 
 
 .sheet-abgeleitete-eigenschaft {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -739,24 +691,13 @@ input[type="text"].sheet-allgemein  {
 }
 
 .sheet-abgeleitete-eigenschaften3-grid {
-	/* width: 600px;*/
 	display: grid;
-	/* grid-gap: 10px grid-template-columns : repeat(8, 1fr); */
 	grid-gap: 5px;
-  /* grid-template-columns : repeat(auto-fill, 10em); */
-	/* grid-template-rows: repeat(8, 1fr ); */
 	grid-template-columns: repeat(5, 1fr);;
-	/* grid-auto-flow: column; */
 }
 
 
-
-
-
-
 /* Grid Modifikator */
-
-
 
 .sheet-modifikator-grid {
 	display: grid;
@@ -843,8 +784,6 @@ input[type="text"].sheet-allgemein  {
 
 input[type="checkbox"].sheet-modifikator {
   width: 1em;
-  /*height: 60%;*/
-
 }
 
 /* Grid Talent */
@@ -1106,7 +1045,6 @@ input[type="checkbox"].sheet-talent {
 .sheet-kampf-header-grid {
 	display: grid;
 	grid-gap: 5px;
-	/*grid-template-columns: repeat(8, 1fr);*/
   grid-template-columns: 1fr 2em, 1fr 2em, 1fr 2em, 1fr 2em ;
   border: 1px solid;
   border-color: black;
@@ -1285,8 +1223,6 @@ input[type="checkbox"].sheet-talent {
 
 
 .sheet-kampf-header {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -1301,8 +1237,6 @@ button.sheet-kampf-header {
 
 
 /* Grid Kampf Header */
-
-
 .sheet-kampf-nah-grid {
 	display: grid;
 	grid-gap: 5px;
@@ -1898,8 +1832,6 @@ input[type="checkbox"].sheet-kampf-nah {
 }
 
 
-
-
 input[type="checkbox"].sheet-kampf-nah {
   width: 15%;
   height: 60%;
@@ -1907,17 +1839,12 @@ input[type="checkbox"].sheet-kampf-nah {
 
 
 .sheet-kampf-nah {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
   margin: 2px;
 	text-align: left;
 }
-
-
-/*   class="sheet-kampf-nah sheet-kampf-nah-"   */
 
 
 /* Grid Fernkampf */
@@ -1931,8 +1858,6 @@ input[type="checkbox"].sheet-kampf-nah {
   margin: 10px;
   padding: 5px;
 }
-
-
 
 .sheet-kampf-fern-cell1 {
 	grid-column: 1 /1;
@@ -2304,8 +2229,6 @@ input[type="checkbox"].sheet-kampf-nah {
 
 
 .sheet-kampf-fern {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -2320,12 +2243,6 @@ input[type="checkbox"].sheet-kampf-fern {
   width: 15%;
   height: 60%;
 }
-
-/*
-button.sheet-kampf-fern {
-  width: 4em;
-}
-*/
 
 
 /* Magie */
@@ -2527,8 +2444,6 @@ button.sheet-kampf-fern {
 
 
 .sheet-magie-header {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -2546,9 +2461,6 @@ input[type="checkbox"].sheet-magie-header {
 
 
 /* Fake checkbox */
-
-
-
 
 input[type="checkbox"].sheet-magie-cb
 {
@@ -2587,9 +2499,6 @@ input[type="checkbox"].sheet-magie-cb:checked ~ div.sheet-magie-erweiterung {
     display: none;
 }
 
-/* sheet-zauberliste>fieldset.repeating_zauber input[type="select"].sheet-zauber-eigenschaft {
-  width: 2em;
-} */
 
 div.sheet-zauberliste {
 	max-height: 999999px;
@@ -2599,7 +2508,6 @@ div.sheet-zauberliste {
 	overflow: hidden;
 }
 
-/* .charsheet*/
 
 .repcontainer .repitem,          /* A filterbox should look exactly like a repitem.  */
 .sheet-zauber-filtered {
@@ -2837,8 +2745,6 @@ input.sheet-zauber-cb0:checked~.sheet-zauber-filtered,      /* Always display al
 
 
 .sheet-glaube-header {
-	/* background-color: #fff;
-	color: #000; */
 	border-radius: 4px;
 	padding: 2px;
   vertical-align: middle;
@@ -2856,9 +2762,6 @@ input[type="checkbox"].sheet-glaube-header {
 
 
 /* Fake checkbox */
-
-
-
 
 input[type="checkbox"].sheet-glaube-cb
 {
@@ -2897,9 +2800,6 @@ input[type="checkbox"].sheet-glaube-cb:checked ~ div.sheet-glaube-erweiterung {
     display: none;
 }
 
-/* sheet-liturgieliste>fieldset.repeating_liturgie input[type="select"].sheet-liturgie-eigenschaft {
-  width: 2em;
-} */
 
 div.sheet-liturgieliste {
 	max-height: 999999px;
@@ -2909,7 +2809,6 @@ div.sheet-liturgieliste {
 	overflow: hidden;
 }
 
-/* .charsheet*/
 
 .repcontainer .repitem,          /* A filterbox should look exactly like a repitem.  */
 .sheet-liturgie-filtered {
@@ -2950,7 +2849,6 @@ input.sheet-liturgie-cb0:checked~.sheet-liturgie-filtered,      /* Always displa
 
 /* Sonderfertigkeiten */
 
-
 div.sheet-sonderfertigkeitliste {
   max-height: 999999px;
   visibility: visible;
@@ -2959,9 +2857,7 @@ div.sheet-sonderfertigkeitliste {
   overflow: hidden;
 }
 
-
-
-        /* A filterbox should look exactly like a repitem.  */
+/* A filterbox should look exactly like a repitem.  */
 .sheet-sonderfertigkeit-filtered {
     padding: 5px 5px 2px 5px;
     margin: 5px;
@@ -3024,12 +2920,9 @@ input.sheet-sonderfertigkeit-cb0:checked~.sheet-sonderfertigkeit-filtered,      
 /*  --- Artefakte   --- */
 
 textarea.sheet-zm_gegenstand {
-
   width: 64em;
   height: 4em;
 }
-
-
 
 
 
@@ -3284,7 +3177,8 @@ button[type="roll"].sheet-log::before {
 	line-height: 1.6em;
 	font-size: 1.2em;
 	text-align: left;
-	font-family: "Times New Roman", Times, serif;
+	/* font-family: "Times New Roman", Times, serif;*/
+  font-family: 'Gentium Book Basic', serif;
 	font-variant: small-caps;
 }
 
@@ -3356,7 +3250,7 @@ button[type="roll"].sheet-log::before {
 .sheet-tooltip {
   position: relative;
   display: inline-block;
-  /*border-bottom: 1px dotted black;*/
+  border-bottom: 1px dotted black;
 }
 
 .sheet-tooltip .sheet-tooltiptext {
