Host images on Github

--- a/INS-MV_3E/insmv3e.css
+++ b/INS-MV_3E/insmv3e.css
@@ -26,7 +26,7 @@ textarea {
   
   .sheet-main {
       padding: 10px;
-      background-image: url("http://lutim.altay.fr/zEDVnEyi/QdaFK5C4.png");
+      background-image: url("https://raw.githubusercontent.com/DrAltay/roll20-character-sheets/insmv-3eme-ed/INS-MV_3E/dust_scratches.png");
       background-repeat: repeat;
   }
   
