Fix unique attr names for powers

--- a/INS-MV_3E/insmv3e.css
+++ b/INS-MV_3E/insmv3e.css
@@ -80,6 +80,10 @@ textarea {
   .sheet-power > * {
       flex: auto;
   }
+  
+  .sheet-powers-group textarea {
+      height: 1.3em;
+  }
 
   .sheet-powers-group {
     border: 1px inset rgba(0,0,0,0.5);
