Fix roll template for demon crit

--- a/INS-MV_3E/insmv3e.css
+++ b/INS-MV_3E/insmv3e.css
@@ -327,7 +327,7 @@ background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
   }
   
   .sheet-rolltemplate-insmv .sheet-crit-angel::after{
-      content: "   ✝️";
+      content: "   ✝";
       font-size: 1em;
       color: #e1ac71;
       text-shadow: -1px -1px 0 #795202, 1px -1px 0 #795202, -1px 1px 0 #795202, 1px 1px 0 #795202;
