add version number to D&D sheet uc-703

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3145,8 +3145,9 @@ span.sheet-spellconcentration
 .sheet-version {
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: 5px;
     pointer-events: none;
+    font-size: 0.25em;
 }
 
 .charsheet .sheet-options .sheet-body .sheet-version input[type="text"] {
@@ -3710,7 +3711,8 @@ span.sheet-spellconcentration
     margin-left: 30px;
 }
 
-.charsheet.lang-it .sheet-header .sheet-part input[type="text"], .charsheet .sheet-header .sheet-part select {
+.charsheet.lang-it .sheet-header .sheet-part input[type="text"],
+.charsheet.lang-it .sheet-header .sheet-part select {
     height: 46px;
 }
 
