remove another PR

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3711,8 +3711,7 @@ span.sheet-spellconcentration
     margin-left: 30px;
 }
 
-.charsheet.lang-it .sheet-header .sheet-part input[type="text"],
-.charsheet.lang-it .sheet-header .sheet-part select {
+.charsheet.lang-it .sheet-header .sheet-part input[type="text"], .charsheet .sheet-header .sheet-part select {
     height: 46px;
 }
 
