removed table tags used for styling

--- a/Buried Treasures/buried-treasures.css
+++ b/Buried Treasures/buried-treasures.css
@@ -5,6 +5,7 @@
 
 textarea {
     resize: vertical;
+    width: 370px;
 }
 
 th {
@@ -14,4 +15,34 @@ th {
 
 td {
     padding: 1px;
+}
+
+label {
+    display: inline-block;
+    width: 20%;
+    font-size: small;
+    font-weight: normal;
+}
+
+.sheet-column {
+    float: left;
+    width: 50%;
+}
+
+.sheet-row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sheet-line {
+    padding: 1px;
+}
+
+.sheet-title {
+    font-weight: bold;
+}
+
+.sheet-centered {
+    text-align: center;
 }
