--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -25,6 +25,13 @@
     box-shadow: 0 -1px 0 #000;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: red;
+	font-style:italic;
+	opacity: 0.5; /* Firefox */
+}
+
+
 /* section heading box */
 .sheet-section-heading {
     width: 100%;
@@ -793,6 +800,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
 .sheet-points .sheet-tooltip { margin-left: -300px; }
+.sheet-spells .sheet-col11 .sheet-tooltip { margin-left: -150px; }
+.sheet-spells .sheet-col12 .sheet-tooltip { margin-left: -200px; }
 
 .sheet-thrown-object {
     width: calc(100% - 140px - 0.8em);
