--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1521,7 +1521,25 @@
 
 		.sheet-op-col {margin-bottom: 5px;}
 
-		.sheet-op-col h2 {text-decoration: underline;}
+		.sheet-op-col h2 {
+			text-decoration: underline;
+			width: 100%;
+		}
+
+		.sheet-op-col button[name="act_import_launch"] {
+			border: 2px solid black;
+			background: #333;
+			color: white;
+			font-weight: bold;
+			width: auto;
+			height: auto;
+			padding: 2% 4%
+		}
+
+		.sheet-op-col p {
+			margin-top: 2%;
+			margin-right: 5%;
+		}
 
 		.sheet-op-col hr {
 			border : 0.5px solid #1c1c1c;
@@ -2362,6 +2380,82 @@
 
 	.sheet-rolltemplate-rolls span.sheet-template-desc .inlinerollresult {font-size: 14px;}
 
+/********************************************************************************************************/
+/*******************************         Charactermancer        ****************************************/
+/******************************************************************************************************/
+	div.sheet-mancer-box {
+		border: 2px solid #610b0d;
+		background-color: #e7e6e5;
+		margin: 1% 2%;
+		padding: 1% 2%;
+	}
+
+	div.sheet-mancer-box input[type="radio"] {
+		opacity: 1;
+		height: 1.5em;
+		width: 1.5em;
+	}
+
+	div.sheet-mancer-box label {
+		display: inline-block;
+		width: 15%;
+		margin: 2% 2%;
+	}
+
+	div.sheet-mancer-box h1 {
+		text-decoration: underline;
+	}
+
+	div.sheet-mancer-box h4 {
+		display: inline;
+		margin-left: 2%;
+	}
+
+	div.sheet-mancer-box textarea {
+		min-height: 5em;
+		width: 100%;
+	}
+
+	div.sheet-mancer-box hr {
+		margin-top: 3%;
+		margin-bottom: 3%;
+	}
+	
+	div.sheet-mancer-box button,
+	div.sheet-bottombar button {
+		border-radius   : 2px;
+		font-weight     : bolder;
+		height          : 2em;
+		padding         : 5px;
+		text-transform  : capitalize;
+		background-color: #333;
+		box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
+		color           : #fff
+	}
+
+	div.sheet-mancer-box button:hover,
+	div.sheet-mancer-box button:focus {
+		border-radius   : 2px;
+		font-weight     : bolder;
+		height          : 2em;
+		padding         : 5px;
+		text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
+		text-transform  : capitalize;
+		border: 0.1em dotted white;
+	}
+
+	div.sheet-mancer-box button[type="action"] {
+		height          : 2em;
+		padding         : 5px;
+		width           : 20%;
+		font-size: 1.5em;
+	}
+
+	div.sheet-mancer-box button[type="cancel"] {
+		margin-top: 3%;
+		float: right;
+		font-size: 1em;
+	}
 
 /********************************************************************************************************/
 /*******************************         FireFox             *******************************************/
