[Savage Worlds Tabbed 3.7] Select skills available for current Setting. (#5364)
* - Added skill selection allowed in current setting
- Enabled extra i18n entries
- Fixed Wounds/Fatigue modifiers placeholders and i18n issues
- Fixed Wounds/Fatigue CSS in "long label languages" like French

* - added Finderski changes to the changelist
- Added French translation for Finderski changes
- Fixed typos

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -490,7 +490,7 @@ button[type=roll].sheet-benniesxp {
     transform: rotate(270deg);
     float: left;
     margin-left: -20px;
-    margin-right: 15px;
+    margin-right: 0px;
 }
 
 .sheet-vertLeft {
@@ -498,7 +498,7 @@ button[type=roll].sheet-benniesxp {
     float: right;
     position: relative;
     top: -43px;
-    left: 15px;
+    left: 13px;
 }
 
 .sheet-bigger {
@@ -2561,6 +2561,7 @@ span.sheet-vehiclesT {
 .sheet-Injuries,
 .sheet-WorstNightmare,
 .sheet-Motivation,
+.sheet-allowableSkillItem,
 .sheet-hideArcanum:checked + .sheet-arcanum {
     display: none;
 }
@@ -2617,7 +2618,8 @@ span.sheet-vehiclesT {
 .sheet-StaticSkill:checked + .sheet-staticTracking,
 .sheet-StaticSkill:checked + .sheet-staticRitual,
 .sheet-StaticSkill:checked + .sheet-staticWeirdScience,
-.sheet-StaticSkill:checked + .sheet-staticOther {
+.sheet-StaticSkill:checked + .sheet-staticOther,
+.sheet-AllowSkill:checked + .sheet-allowableSkillItem {
     display: block;
 }
 
