D&D 5e - UC-703 Improve versioning for D&D 5e. (#5398)
* add version number to D&D sheet uc-703

* remove another PR

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3145,8 +3145,9 @@ span.sheet-spellconcentration
 .sheet-version {
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: 5px;
     pointer-events: none;
+    font-size: 0.25em;
 }
 
 .charsheet .sheet-options .sheet-body .sheet-version input[type="text"] {
