--- a/Pathfinder Second Edition by Roll20/pathfinder2.css
+++ b/Pathfinder Second Edition by Roll20/pathfinder2.css
@@ -207,7 +207,7 @@
 		mask-size: contain;
 	}
 
-/* NOT WORKING 
+/* NOT WORKING
 	i.sheet-single-action {
 		mask-image: url('https://s3.amazonaws.com/files.d20.io/images/86669372/Pcb4lIrqUua7EyhBvSJzDw/med.png');
 		width: 1em;
@@ -683,7 +683,7 @@ div.sheet-tabs {
 	grid-template-columns: 3em repeat(6, 1fr);
 	grid-column-gap: 5px;
 	width: calc(100% - 10px);
-	align-items: center; 
+	align-items: center;
 	margin: 5px;
 }
 
@@ -1170,7 +1170,7 @@ div.sheet-armorclass-unarmored-grid {
 	grid-column          : 1 / -1;
 	grid-row             : 2;
 	grid-template-columns: 2fr 2fr 2fr 2fr;
-	grid-column-gap		 : 5px; 
+	grid-column-gap		 : 5px;
 	text-align           : center;
 }
 
@@ -1433,14 +1433,14 @@ div.sheet-repeating textarea {
 	min-height: 10em;
 }
 
-div.sheet-repeating-grid {	
+div.sheet-repeating-grid {
 	grid-column-gap: 2px;
 	grid-template-columns: 1fr 1.75em;
 	align-items: center;
 	margin-bottom: -15px;
 }
 
-div.sheet-repeating .repitem {	
+div.sheet-repeating .repitem {
 	background-color: hsl(0, 0%, 100%);
 	border-bottom: 1px solid hsl(0, 0%, 50%)
 }
@@ -1490,7 +1490,7 @@ div.sheet-repeating-grid span.sheet-collapse {
 
 div.sheet-repeating-grid button[type="roll"] {
 	padding: 1px;
-	box-shadow: unset; 
+	box-shadow: unset;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: 11pt;
@@ -1601,7 +1601,7 @@ div.sheet-range-damage-grid .sheet-sublabel {
 div.sheet-melee-display-grid,
 div.sheet-range-display-grid {
 	grid-template-columns: 50% calc(50% - 2.5em) 1.75em;
-	grid-gap: 2px; 
+	grid-gap: 2px;
 	align-items: center;
 	color: hsl(0, 0%, 100%);
 	padding: 5px 0;
@@ -1633,7 +1633,7 @@ div.sheet-range-display-grid span.sheet-collapse {
 	color: hsl(0, 0%, 100%);
 	padding-left: 5px;
 	grid-column: 1 / -1;
-	margin: 5px; 
+	margin: 5px;
 }
 
 div.sheet-melee-display-grid input.sheet-toggles[value*="collapse"] ~ span.sheet-collapse,
@@ -2104,11 +2104,11 @@ div.sheet-details div.sheet-action-activity .sheet-settings {
 div.sheet-details div.sheet-notes textarea:first-child {
 	height: 100%;
 	grid-column: 1;
-	grid-row: 1 / 4; 
+	grid-row: 1 / 4;
 }
 
 div.sheet-reation-activity-grid {
-	display: grid; 
+	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-gap: 5px;
 }
@@ -2525,7 +2525,7 @@ div.sheet-inv-display-grid h2 {
 	text-align: center;
 }
 
-div.sheet-inv-display-grid:first-child h2:first-child {	
+div.sheet-inv-display-grid:first-child h2:first-child {
 	font-family: serif;
 	font-size: 12pt;
 	font-weight: bold;
@@ -2642,7 +2642,7 @@ div.sheet-spellattack-grid span.sheet-display,
 div.sheet-spelldc-grid span.sheet-display   {
 	width: 2.5em;
 	height: 2.5em;
-	line-height: 2.25em;	
+	line-height: 2.25em;
 }
 
 div.sheet-spellattack-grid button[name="act_toggle_spell_attack"],
@@ -2675,7 +2675,7 @@ div.sheet-spelldc-grid {
 }
 
 div.sheet-spells div.sheet-spelldc-grid span.sheet-spelldc-base {
-	font-size: 0.6em;	
+	font-size: 0.6em;
 }
 
 div.sheet-spelldc-grid div.sheet-ability-select,
@@ -2744,11 +2744,11 @@ div.sheet-spellslots label.sheet-spellslots-row {
 	grid-column-gap: 5px;
 	align-items: center;
 	font-size: 10pt;
-} 
+}
 
 div.sheet-spell-col > input[type="checkbox"] {
 	display: none;
-}	
+}
 
 div.sheet-spellslots label.sheet-spellslots-row-focus span.sheet-opaque {
 	grid-column: 2 / 4;
@@ -2834,8 +2834,8 @@ div.sheet-spells div.sheet-spell-panel-row > span {
 div.sheet-spells div.sheet-spell-panel-row > div.sheet-settings {
 	grid-column: 1 / -1;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr; 
-	grid-gap: 5px; 
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap: 5px;
 }
 
 div.sheet-spells div.sheet-spell-column div.sheet-settings {
@@ -2877,11 +2877,11 @@ div.sheet-spell-panel-row div.sheet-settings label:nth-child(2) {
 }
 
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(13) select {
-	width: 28%;	
+	width: 28%;
 }
 
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(13) input[type="number"]:nth-child(3) {
-	width: 29.9% !important;	
+	width: 29.9% !important;
 }
 
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(14) select {
@@ -2894,11 +2894,11 @@ div.sheet-spell-panel-row div.sheet-settings label:nth-child(18),
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(19),
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(20) {
 	grid-column: 1 / -1;
-} 
+}
 
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(16) select {
 	width: 25%;
-} 
+}
 
 div.sheet-spell-panel-row div.sheet-settings label:nth-child(16) {
 	text-align: center;
@@ -3098,7 +3098,7 @@ input.sheet-toggles[value*="collapse"] ~ div.sheet-repeating-grid span.sheet-col
 input.sheet-toggles[value*="collapse"] ~ div.sheet-repeating-grid-display span.sheet-collapse,
 input.sheet-toggles[value*="collapse"] ~ div.sheet-repeating-spell-display span.sheet-collapse,
 input.sheet-toggles[value*="collapse"] ~ div.sheet-inv-display-grid span.sheet-collapse,
-input.sheet-toggles[value*="collapse"] ~ div.sheet-melee-display-grid span.sheet-collapse, 
+input.sheet-toggles[value*="collapse"] ~ div.sheet-melee-display-grid span.sheet-collapse,
 input.sheet-toggles[value*="collapse"] ~ div.sheet-range-display-grid span.sheet-collapse {
 	height: auto;
 }
@@ -3208,7 +3208,7 @@ div.sheet-strikes.sheet-ranged input[name="attr_toggles"][value*="settings"] ~ d
  input[type="checkbox"] {
 		height      : 15px;
 		width       : 15px;
-} 
+}
 
 /****************************************************************************************************/
 /*********************                       OPTIONS                     ***************************/
@@ -3468,26 +3468,26 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
     div.sheet-npc-block {
         margin: 0.5em 0 0.5em 0;
 	}
-	
+
 	div.sheet-npc-defense-grid > div,
-	div.sheet-npc-block label {		
+	div.sheet-npc-block label {
 		background: hsla(41, 29%, 90%, 0.3);
 		border: 1px solid hsla(217, 100%, 15%, 0.1);
 		padding: 5px;
 	}
-	
+
 	div.sheet-npc-abilities,
 	div.sheet-npc-perception,
 	div.sheet-npc-info {
 		display: grid;
 		grid-template-columns: repeat(6, 1fr);
 		grid-gap: 5px;
-	} 
+	}
 
 	div.sheet-npc-defense-grid {
 		display: grid;
 		grid-template-columns: 0.25fr 1fr;
-		grid-gap: 5px; 
+		grid-gap: 5px;
 	}
 
 	div.sheet-npc-defense-grid > div.sheet-npc-saves {
@@ -3510,7 +3510,7 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	div.sheet-npc-defense-grid > div > label {
 		background: unset;
 		padding: unset;
-		border: unset; 
+		border: unset;
 	}
 
 	div.sheet-npc-perception > label,
@@ -3543,7 +3543,7 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	div.sheet-npc-skills > div.repcontainer {
 		display: flex;
 	}
-	
+
 	div.sheet-npc-skills > div.repcontainer > div.repitem label,
 	div.sheet-npc-skill-grid > label {
 		display: grid;
@@ -3563,7 +3563,7 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	div.sheet-npc-skill-grid > label > span:nth-child(3),
 	div.sheet-npc-skill-grid > label > input:nth-child(4) {
 		grid-column: 1 / -1;
-	} 	
+	}
 
 	div.sheet-npc-defense-grid > div.sheet-npc-offense {
 		display: grid;
@@ -3646,7 +3646,7 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
     }
 
     input.sheet-type[value*="npc"] ~ div.sheet-tabs button[name="act_whisper"] {
-    	
+
     }
 
     /* show/hide areas */
@@ -3660,6 +3660,10 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
         display: block;
     }
 
+    div.sheet-npc .repitem button.sheet-settings-button {
+        left: -1.5em;
+        top: 1.1em;
+    }
     input.sheet-toggles[value*="npc"] ~ div.sheet-npc div.sheet-npc-settings {
         border: dotted hsl(1, 70%, 21%) 2px;
         height: auto;
@@ -3773,6 +3777,7 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 
     div.sheet-npc:hover button[name="act_toggle_npc"]:hover,
     div.sheet-npc div.sheet-repeating:hover button.sheet-settings-button:hover,
+    div.sheet-npc input[name="attr_toggles"][value*="settings"] + div > button.sheet-settings-button,
     input.sheet-toggles[value*="npc"] ~ div.sheet-npc button[name="act_toggle_npc"] {
         opacity: 1;
     }
@@ -3792,14 +3797,14 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
         line-height: 1em;
         text-transform: capitalize;
 	}
-	
+
 	div.sheet-npc-defense-grid label > span,
 	div.sheet-npc-abilities > label > span,
 	div.sheet-npc-perception > label > span,
 	div.sheet-npc-info > label > span {
 		display: block;
 		text-align: center;
-	} 
+	}
 
     div.sheet-npc input[type="text"],
     div.sheet-npc input[type="number"] {
@@ -3815,12 +3820,12 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	div.sheet-npc-settings label > input.sheet-number {
 		text-align: center;
 	}
-	
-	div.sheet-npc input:placeholder-shown { 
+
+	div.sheet-npc input:placeholder-shown {
 		background: hsl(0, 100%, 90%);
 		color: hsl(0, 100%, 50%);
 		border: 1px solid hsl(0, 100%, 35%);
-	} 
+	}
 
     div.sheet-npc label {
         color: hsl(217, 100%, 20%);
@@ -3850,7 +3855,8 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	}
 
 	/* SHOW & HIDE NPC FREE ACTION OR REACTION */
-	span.sheet-actiontype input[value="0"] +  span {
+    span.sheet-actiontype input[value=""] + span,
+    span.sheet-actiontype input[value="0"] + span {
 		display: none;
 	}
 
@@ -3861,5 +3867,3 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 	span.sheet-actiontype span:after {
 		content: ".";
 	}
-
-	
