--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -2462,7 +2462,7 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
 }
 
 div.sheet-rot-grid div.sheet-dots span {
-  content: url('http://imgsrv.roll20.net/?src=raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%2520Year%2520Zero/images/biohazard.png');
+  content: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Mutant%20Year%20Zero/images/biohazard.png');
 }
 
 input[name="attr_rot_permenant"][value="0"] ~ input:nth-of-type(1n+1) + span,
