removed the last remaining table tag

--- a/Buried Treasures/buried-treasures.css
+++ b/Buried Treasures/buried-treasures.css
@@ -8,15 +8,6 @@ textarea {
     width: 370px;
 }
 
-th {
-    text-align: center;
-    padding: 2px;
-}
-
-td {
-    padding: 1px;
-}
-
 label {
     display: inline-block;
     width: 20%;
@@ -24,15 +15,48 @@ label {
     font-weight: normal;
 }
 
+button {
+    height: 14px;
+}
+
 .sheet-column {
     float: left;
     width: 50%;
+}
+
+.sheet-minicolumn {
+    float: left;
+    width: 12%;
+    text-align: center;
+}
+
+.sheet-smallcolumn {
+    float: left;
+    width: 15%;
+    text-align: center;
+}
+
+.sheet-firstcolumn {
+    float: left;
+    width: 12%;
+    font-size: 12px;
+    padding-top: 7px;
 }
 
 .sheet-row:after {
     content: "";
     display: table;
     clear: both;
+}
+
+.sheet-smallrow:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sheet-smallrow {
+    padding-bottom: 2px;
 }
 
 .sheet-line {
