made tables into divs

--- a/Wild Talents 2nd Edition/wt2.css
+++ b/Wild Talents 2nd Edition/wt2.css
@@ -3,11 +3,51 @@ h1.sheet-title {
     border: 1px solid gray;
 }
 
-table, th, td {
-  padding: 5px;
+
+div {
+    padding:5px;
 }
-table {
-  border-spacing: 15px;
+
+.sheet-tr {
+    display:table-row;
+}
+
+.sheet-td {
+    display: table-cell;
+    text-align: center;
+}
+.sheet-power1name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power2name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power3name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-headheight {
+    margin-left: 45px;
+    margin-right: 15px;
+}
+.sheet-torsoheight {
+    margin-left: 35px;
+}
+.sheet-rarmheight {
+    margin-left: 42px;
+}
+.sheet-larmheight {
+    margin-left: 42px;
+}
+.sheet-rlegheight {
+    margin-left: 47px;
+    margin-right: 15px;
+}
+.sheet-llegheight {
+    margin-left: 47px;
+    margin-right: 15px;
 }
 
 
@@ -71,54 +111,35 @@ input.sheet-tab:checked + span::before {
 
 input.sheet-tab:not(:first-child) + span::before { border-left: none; }
 
-th {
-  text-align: center;
-  vertical-align: middle;
-}
+
+
 
 input.sheet-tab2 + span::before {
 
-    left: 0px;
+   
     
-}
-th {
-  text-align: center;
-  vertical-align: middle;
-}
+
 
 input.sheet-tab2:checked + span::before {
 
-}
-th {
-  text-align: center;
-  vertical-align: middle;
-}
+
 input.sheet-tab3 + span::before { left: 0px; }
 
-td {
-    padding: 5px;
-}
+
 
 
 input.sheet-tab4 + span::before { left: 0px; }
-td {
-  text-align: center;
-  vertical-align: middle;
-}
 
 input.sheet-tab5 + span::before { left: 0px; }
-td {
-  text-align: center;
-  vertical-align: middle;
-}
 
 
-{
+
+
     border-style:solid;
     border-top:thick double #000000;
-}
 
-}
+
+
 
 div.sheet-tab-content {
     border: 1px solid #a8a8a8;
@@ -129,10 +150,7 @@ div.sheet-tab-content {
 
 div.sheet-tab2 { }
 
-table.sheet-nametable 
-td {
-    padding: 10px;
-}
+
 
 .sheet-rightalign {
     text-align: right;
