saving progress. Skills working

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -60,7 +60,9 @@
 		vertical-align: middle;}
 
 	input::placeholder {
-	color: #b8b7b6;}
+		background-color: #b6131321;
+		color: #b8b7b6;
+	}
 
 	input[type="checkbox"],
 	input[type="radio"],
@@ -827,11 +829,6 @@
 				padding    : 2px;
 				font-weight: bold;}
 
-		/***** OLD REPEATING SECTION to be Deprecated *****/
-			.sheet-repeat-box .sheet-settings,
-			.sheet-repeat-box .sheet-display  {
-				margin-left: -8px;}
-
 	/***** COLLAPSABLE DIVS *****/
 		.sheet-collapsable {
 			padding-left: 1.5em;
@@ -928,8 +925,13 @@
 		select.sheet-attr-select[name="attr_limit"] {
 			left    : 82%;}
 
-			.sheet-attr-select option:nth-of-type(1n+5) {color: #610b0d;}
+			.sheet-attr-select option:nth-of-type(1n+5),
+			.sheet-limit-select option:nth-of-type(1n+5) {color: #610b0d;}
 			.sheet-attr-select option:nth-of-type(1n+9) {color: #7a2593;}
+
+			.sheet-limit-select  {
+				margin-left: 4%;
+			}
 
 		/***** SKILLS REPEATING SECTION *****/ 
 			.sheet-skills-row .sheet-settings-row div {
@@ -939,6 +941,11 @@
 			.sheet-skill-box select.sheet-skill-select,
 			.sheet-skill-box .sheet-settings input[type="text"] {
 				width: 50%;}
+
+			button.sheet-pictos[name="act_skill"] {
+				height: 5%;
+				margin-left: 1%;
+			}
 
 			.sheet-skill-box .sheet-settings input[type="text"] {text-align: left;}
 
@@ -963,7 +970,8 @@
 					font-weight  : 700;
 					margin-bottom: -3px;}
 
-				.sheet-skills-row .sheet-settings-row input[type="text"] {width: 48%;}
+				.sheet-skills-row .sheet-settings-row input[type="text"] {
+					width: 45%;}
 
 			/***** SKILLS DISPLAY *****/
 				.sheet-skill-box .sheet-name {
@@ -2400,6 +2408,7 @@
 	div.sheet-mancer-box input[type="text"] {
 		background-color: white;
 		border: 1px solid #333;
+		width: 100%;
 	}
 
 	div.sheet-mancer-box label {
@@ -2482,7 +2491,7 @@
 	}
 
 	div.sheet-mancer-box .sheet-results,
-	div.sheet-mancer-box .sheet-ignored {
+	div.sheet-mancer-box .sheet-error {
 		border: 1px solid #333;
 		box-shadow: inset 0px 0px 3px 1px #7c7c7c;
 		height: 30em;
@@ -2497,7 +2506,7 @@
 		background: rgba(136, 221, 4, 0.1);
 	}
 
-	div.sheet-mancer-box .sheet-ignored {
+	div.sheet-mancer-box .sheet-error {
 		border: 1px solid #610b0d;
 		background: rgba(204, 7, 1, 0.11);
 	}
@@ -2527,7 +2536,8 @@
 		grid-row: 2 / 2;
 	}
 
-	div.sheet-hidden {
+	div.sheet-hidden,
+	div.sheet-hidden-skills {
 		display: none;
 	}
 
@@ -2535,7 +2545,8 @@
 		display: inline;
 	}
 
-	input[name="comp_hidden"]:checked + div.sheet-hidden {
+	input[name="comp_hidden"]:checked + div.sheet-hidden,
+	input[name="comp_hidden"]:checked + div.sheet-hidden-skills {
 		display: block;
 	}
 
