stopped the loop. starting weapons

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -941,7 +941,9 @@
 			.sheet-skill-box .sheet-settings input[type="text"] {
 				width: 50%;}
 
-			button.sheet-pictos[name="act_skill"] {
+			button.sheet-pictos[name="act_skill"],
+			button.sheet-pictos[name="act_martial"],
+			button.sheet-pictos[name="act_quality"] {
 				height: 5%;
 				margin-left: 1%;
 			}
@@ -1081,7 +1083,6 @@
 				width       : 82%;}
 
 			.sheet-quality .sheet-display-row:nth-of-type(1) {
-				margin-left: 2%;
 				width: 80%;}
 
 			.sheet-quality .sheet-display-row:nth-of-type(2),
