Added more power slots

--- a/Wild Talents 2nd Edition/wt2.css
+++ b/Wild Talents 2nd Edition/wt2.css
@@ -28,6 +28,14 @@ div {
   margin: auto;
   width: 40%;
 }
+.sheet-power4name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power5name {
+  margin: auto;
+  width: 40%;
+}
 .sheet-headheight {
     margin-left: 45px;
     margin-right: 15px;
@@ -112,7 +120,10 @@ input.sheet-tab:checked + span::before {
 input.sheet-tab:not(:first-child) + span::before { border-left: none; }
 
 
-
+th {
+  text-align: center;
+  vertical-align: middle;
+}
 
 input.sheet-tab2 + span::before {
 
