Weapons are working

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -996,8 +996,8 @@
 
 			/***** WEAPON SETTINGS *****/
 				.sheet-weapon-box select {width: 10%;}
-
 				.sheet-weapon-box .sheet-settings-row {margin-top: 5px;}
+				.sheet-weapon-box .sheet-settings {margin-left: -2%;}
 
 				.sheet-arms input[type="text"],
 				.sheet-arms h3,
