Exotic weapons, Weapon mods fixed

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -295,7 +295,7 @@
 
 		.sheet-row-long {border-bottom: 1px solid #000;}
 		.sheet-settings-row {margin-top: 5px;}
-		.sheet-settings-row select.sheet-skill-select {width: 30%;}
+		.sheet-settings-row select.sheet-skill-select {width: 29%;}
 
 	/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
 		.sheet-border-box {
@@ -992,7 +992,12 @@
 			.sheet-tab-switch[value="range"] ~ .sheet-weapon-range,
 			.sheet-tab-switch[value="melee"] ~ .sheet-weapon-melee,
 			.sheet-arms .sheet-display  {
-				display: inline-block;}
+				display: inline-block;%;
+			}
+
+			.sheet-arms .sheet-display  {
+				margin-left: -1%;
+			}
 
 			/***** WEAPON SETTINGS *****/
 				.sheet-weapon-box select {width: 10%;}
@@ -1020,10 +1025,6 @@
 
 				.sheet-weapon-melee h3 {
 					margin-right: 10px;}
-
-					.sheet-weapon-range h3:first-child,
-					.sheet-weapon-melee h3:first-child {
-						margin-right: -1%}
 
 					.sheet-weapon-melee h3:first-child,
 					.sheet-weapon-melee input[type="text"]:first-child {
