--- a/Wild Talents 2nd Edition/wt2.css
+++ b/Wild Talents 2nd Edition/wt2.css
@@ -1,8 +1,62 @@
 h1.sheet-title {
     color: black;
-    border: 1px solid black;
+    border: 1px solid gray;
 }
 
+
+div {
+    padding:5px;
+}
+
+.sheet-tr {
+    display:table-row;
+}
+
+.sheet-td {
+    display: table-cell;
+    text-align: center;
+}
+.sheet-power1name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power2name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power3name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power4name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-power5name {
+  margin: auto;
+  width: 40%;
+}
+.sheet-headheight {
+    margin-left: 45px;
+    margin-right: 15px;
+}
+.sheet-torsoheight {
+    margin-left: 35px;
+}
+.sheet-rarmheight {
+    margin-left: 42px;
+}
+.sheet-larmheight {
+    margin-left: 42px;
+}
+.sheet-rlegheight {
+    margin-left: 47px;
+    margin-right: 15px;
+}
+.sheet-llegheight {
+    margin-left: 47px;
+    margin-right: 15px;
+}
 
 
 div.sheet-tab-content { display: none; }
@@ -12,8 +66,7 @@ input.sheet-tab2:checked ~ div.sheet-tab2,
 input.sheet-tab3:checked ~ div.sheet-tab3,
 input.sheet-tab4:checked ~ div.sheet-tab4,
 input.sheet-tab5:checked ~ div.sheet-tab5,
-input.sheet-tab6:checked ~ div.sheet-tab6,
-input.sheet-tab7:checked ~ div.sheet-tab7
+
 {
     display: block;
 }
@@ -66,16 +119,23 @@ input.sheet-tab:checked + span::before {
 
 input.sheet-tab:not(:first-child) + span::before { border-left: none; }
 
+
+th {
+  text-align: center;
+  vertical-align: middle;
+}
+
 input.sheet-tab2 + span::before {
 
-    left: 0px;
-}
+   
+    
+
 
 input.sheet-tab2:checked + span::before {
 
-}
 
 input.sheet-tab3 + span::before { left: 0px; }
+
 
 
 
@@ -83,16 +143,14 @@ input.sheet-tab4 + span::before { left: 0px; }
 
 input.sheet-tab5 + span::before { left: 0px; }
 
-input.sheet-tab6 + span::before { left: 0px; }
 
-input.sheet-tab7 + span::before { left: 0px; }
 
-{
+
     border-style:solid;
     border-top:thick double #000000;
-}
 
-}
+
+
 
 div.sheet-tab-content {
     border: 1px solid #a8a8a8;
@@ -103,9 +161,7 @@ div.sheet-tab-content {
 
 div.sheet-tab2 { }
 
-table.sheet-nametable td {
-    padding: 10px;
-}
+
 
 .sheet-rightalign {
     text-align: right;
@@ -121,5 +177,5 @@ select {
 
 section.sheet-headerarea {
     width: 100%;
-    border: 5px solid black;
+    border: 5px solid gray;
 }
