update licenses and social tab

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -859,9 +859,19 @@
 				width   : 95%;
 				height  : 100%;}
 
-			.sheet-collapsable .sheet-desc {display: none;}
+			.sheet-collapsable .sheet-desc,
+			.sheet-collapsable .sheet-desc-lifestyle {
+				display: none;
+			}
 
-			.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {display: inline;}
+			.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
+				display: inline;
+			}
+
+			.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle {
+				display: inline-block;
+				width: 100%;
+			}
 
 			.sheet-arms input.sheet-display-flag,
 			.sheet-arms input.sheet-display-flag + span,
@@ -1146,11 +1156,6 @@
 				margin    : 0px 0px 0px 0px;}
 
 		/***** LIFESTYLE DISPLAY *****/
-			.sheet-lifestyle .sheet-display span {
-				display    : inline-block;
-				font-family: sans-serif;
-				width      : 24%;}
-
 			.sheet-lifestyle .sheet-display-flag:checked ~ span:nth-of-type(1),
 			.sheet-lifestyle .sheet-display-flag ~ span:nth-of-type(1n+2) {
 				display: none;}
