Adjusted CSS/HTML, Vehicles still looping

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1532,13 +1532,17 @@
 				width     : 49%;}
 
 			.sheet-vehicle-box .sheet-display-row h3 {
-				width: 32%;}
+				width: 35%;}
 
 			.sheet-vehicle-box .sheet-display-row div {
 				display    : inline-block;
 				font-weight: normal;
 				text-align : center;
-				width      : 65%;}
+			}
+
+			.sheet-vehicle-box .sheet-display-row div.sheet-vehicle-stat {
+				width: 60%;
+			}
 
 			.sheet-vehicle-box .sheet-collapsable {padding-left: 0.2em;}
 
