update Shadowrun 5th Edition

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -2288,6 +2288,17 @@
 		text-align : left;
 		width      : 700px;}
 
+	div.sheet-footer div {
+		display: inline-block;
+		width: 90%;
+	}
+
+	div.sheet-footer img {
+		float: right;
+		vertical-align: top;
+		width: 5%;
+	}
+
 /********************************************************************************************************/
 /**************************************** REPEATING SECTIONS *******************************************/
 /********************************************************************************************************/
