buried-treasures-minor-esthetical-changes

--- a/Buried Treasures/buried-treasures.css
+++ b/Buried Treasures/buried-treasures.css
@@ -16,12 +16,13 @@ label {
 }
 
 button {
-    height: 14px;
+    height: 22px;
 }
 
 .sheet-column {
     float: left;
     width: 50%;
+    max-width: 450px;
 }
 
 .sheet-minicolumn {
