adding new spell type Zaubertricks

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.css
@@ -2541,7 +2541,8 @@ input.sheet-zauber-cb0:checked~.sheet-zauber-filtered,      /* Always display al
 .sheet-zauber-cb5:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb5:checked~.sheet-zauber-filtered,
 .sheet-zauber-cb6:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb6:checked~.sheet-zauber-filtered,
 .sheet-zauber-cb7:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb7:checked~.sheet-zauber-filtered,
-.sheet-zauber-cb8:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb8:checked~.sheet-zauber-filtered {
+.sheet-zauber-cb8:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb8:checked~.sheet-zauber-filtered
+.sheet-zauber-cb9:checked~.sheet-zauberliste>fieldset.repeating_zauber+.repcontainer>.repitem input.sheet-zauber-cb9:checked~.sheet-zauber-filtered {
 	display: block;
 }
 
