pf2 quantity update

--- a/Pathfinder Second Edition by Roll20/pathfinder2.css
+++ b/Pathfinder Second Edition by Roll20/pathfinder2.css
@@ -2506,8 +2506,8 @@ div.sheet-worn-items {
 /* Sheet display grid */
 
 div.sheet-inv-display-grid {
-	grid-template-columns: 4fr 1.5fr 1fr 0.5fr;
-	padding: 0.25em 0.5em;
+    grid-template-columns: 4fr 1.5fr 0.5fr 1fr 0.5fr;
+    padding: 0.25em 0em;
 }
 
 /* Configure header row */
@@ -2566,6 +2566,10 @@ div.sheet-item-repeating-grid {
 div.sheet-inventory button[type="roll"] {
 	min-height: 1.4em;
 	text-align: left;
+}
+
+div.sheet-inv-display-grid input[name*="quantity"] {
+	margin-left: 15%;
 }
 
 div.sheet-item-repeating-grid label.sheet-inv-name,
@@ -3570,6 +3574,12 @@ div.sheet-options div.sheet-options-wrapper div.sheet-options-panel > * {
 		grid-template-columns: 0.25fr 1fr;
 		grid-column-gap: 5px;
 	}
+
+    div.sheet-npc-general-options > div.sheet-npc-row > label {
+        border: none;
+        font-size: inherit;
+        background: none;
+    }
 
     div.sheet-npc-display {
         margin: 1em;
