delta green wip

--- a/Delta Green by Arc Dream Publishing/src/scss/globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/globals.scss
@@ -22,12 +22,12 @@
             &:focus > h2,
             &:hover > h2,
             &:active > h2 {
-                color: $white;
-                text-shadow: 1px 1px 2px $black, 0 0 25px $accent2, 0 0 5px $accent1
+                color: $accent1;
+                text-shadow: 1px 1px 2px $maincolor, 0 0 25px $accent2, 0 0 5px $accent1
             }
             &[type="roll"],
             &[type="action"] {
-                @include back-col(hsl(0, 0%, 96%));
+                @include back-color(hsl(0, 0%, 96%));
                 border: {
                     bottom             : 0.01em solid #666;
                     bottom-right-radius: 0.01em;
@@ -42,12 +42,12 @@
         }
 
         div {
-            @include back-col(transparent);
+            @include back-color(transparent);
             width: 100%;
         }
 
         fieldset {
-            @include back-col(transparent);
+            @include back-color(transparent);
         }
 
         h1 {
@@ -62,7 +62,6 @@
                 color: $accent1;
             }
             &.sheet-label {
-                @include border(border-bottom);
                 @include button-like();
                 text-align: center;
                 margin-left: 3%;
@@ -77,8 +76,7 @@
         input {
             &[type="text"],
             &[type="number"] {
-                @include back-col(transparent);
-                @include border(border-bottom);
+                @include back-color(transparent);
                 @include text-align(center);
                 border: {
                     left  : 0em;
@@ -89,7 +87,7 @@
                 height       : 2.1em;
             }
             &::placeholder {
-                @include back-col($accent2);
+                @include back-color($accent2);
                 border: 0.1em dotted $accent1;
             }
             &::-webkit-outer-spin-button,
