--- a/Delta Green by Arc Dream Publishing/src/scss/mixins.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/mixins.scss
@@ -1,7 +1,7 @@
 // MIXINS
 //  =============================
    
-    @mixin back-col($color){
+    @mixin back-color($color){
         background-color: $color;
     }
 
@@ -15,10 +15,6 @@
 
     @mixin text-align($align){
         text-align: $align;
-    }
-
-    @mixin border($border) {
-        border-bottom: 0.15em solid $black;
     }
 
     @mixin button-like() {
