--- a/Delta Green by Arc Dream Publishing/src/scss/variables.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/variables.scss
@@ -4,10 +4,9 @@
    $pictos      : "pictos";
 
    // COLORS
-    $accent1  : hsl(305, 98%, 24%);
+   	$maincolor: hsl(0, 6%, 0%);
+    $accent1  : hsl(0, 0%, 96%);
     $accent2  : hsla(253, 35%, 61%, 0.25);
     $accent3  : #b9dadf;
-    $black    : hsl(0, 6%, 0%);
     $dark-font: #000;
     $gray     : #4c4c4c;
-    $white    : hsl(0, 0%, 96%);
