--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -3,7 +3,6 @@
 //  ============================= *
     @import 'src/scss/variables';
 
-
 // MIXINS
 //  =============================
     @import 'src/scss/mixins';
@@ -66,16 +65,16 @@
         }
     }
 
+
 /* HIGHLIGHT BUTTONS
    ============================= */
     input.sheet-whisper-toggle[value*="gm"] + button[name*="whisper"],
     input.sheet-type[value="character"] ~ div.sheet-tabs button[name*="character"],
     input.sheet-type[value="npc"] ~ div.sheet-tabs button[name*="npc"],
-    input.sheet-type[value="notes"] ~ div.sheet-tabs button[name*="notes"],
     input.sheet-type[value="options"] ~ div.sheet-tabs button[name*="options"] {
-        @include back-col($accent1);
+        @include back-color($accent1);
         box-shadow: inset 0px 0px 3px 1px $accent2;
-        color     : $white;
+        color     : $accent1;
     }
 
 /* TABS & LOGO SECTION
@@ -88,28 +87,26 @@
         }
     }
 
-    /* INPUTS FOR CHARACTER, PLAYER, NOTES..... */
-    div.sheet-grid-tab-inputs {
-        grid-template-columns: 8em 73%;
+   /* grid-area: #{$rstart} / #{$cstart} / #{$rend} / #{$cend};*/
 
-        span {
-            font-weight   : bold;
-            @include text-trans(uppercase);
+    div.sheet-grid-tabs {
+        grid-template-columns: 8em 1fr 8em;
+        @include back-color($maincolor);
+
+        img {
+            @include grid-area(1, 2, 3, 2);
         }
-    }
 
-    div.sheet-grid-tab-buttons {
-        grid-template-columns: 2.5em 5em 5em 5em;
-        margin-top           : 2%;
+        button[name="attr_gm_toggle"] {
+            @include grid-area(1, 1, 1, 1);
+        }
 
-        button {
-            &[name="act_whisper"] {
-                font-family: $pictos;
-            }
-            &:nth-of-type(1n+2) {
-                @include button-like();
-                font-variant: small-caps;
-            }
+        button[name="act_toggle_character"] {
+            @include grid-area(1, 3, 1, 3);
+        }
+
+        button[name="act_toggle_npc"] {
+            @include grid-area(2, 3, 2, 3);
         }
     }
 
@@ -124,40 +121,22 @@
     
 /* PC SHEET
    ============================= */
-   div.sheet-grid-header {
-        grid-template-columns: 2em 1fr;
+   div.sheet-pc {
+        grid-template-columns: 1fr 1fr;
 
-       button {
-           @include grid-area(1, 1, 1, 1);
-       }
-
-       h1 {
-           @include grid-area(2, 3, 1, 1);
-       }
+        div.sheet-personal-data {
+            @include grid-area(1, 1, 3, 1);
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            
+            h1 {
+                grid-template-columns: 1fr 1fr 1fr 3fr;
+            }
+        }
    }
 
 
    /* ATTRIBUTES
    ----------------------------- */
-   div.sheet-grid-pc-attributes {
-        grid-template-columns: 10em 1fr;
-        width: 48%;
-
-        button {
-            &[type="roll"] {
-                border-bottom : {
-                    left-radius : 0em;
-                    right-radius: 0em;
-                }
-                @include border(border-bottom);
-                @include button-like();
-            }
-        }
-
-        input[type="text"] {
-            width: 3.5em;
-        }
-   }
 
 
 /* FOOTER
