scss working again

--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -1,15 +1,15 @@
 
 // VARIABLES
 //  ============================= *
-    @import 'src/scss/variables';
+    @import 'src/scss/_variables';
 
 // MIXINS
 //  =============================
-    @import 'src/scss/mixins';
+    @import 'src/scss/_mixins';
 
 /* GLOBAL SETTINGS
     =============================  */
-    @import 'src/scss/globals';
+    @import 'src/scss/_globals';
 
 /* FLEXBOX
    ============================= */
@@ -125,7 +125,7 @@
         grid-template-columns: 1fr 1fr;
 
         div.sheet-personal-data {
-            @include grid-area(1, 1, 3, 1);
+            @include grid-area(1, 1, 3, 3);
             grid-template-columns: 1fr 1fr 1fr 1fr;
             
             h1 {
