pug setup, rolltemplate broken

--- a/Delta Green by Arc Dream Publishing/deltagreen.pug
+++ b/Delta Green by Arc Dream Publishing/deltagreen.pug
@@ -1,6 +1,6 @@
 //VERSION
   =============================
-input(name='attr_version' type='hidden' value='1.1')
+input(name='attr_version' type='hidden' value='1')
 
 // TABS
   =============================
@@ -54,8 +54,10 @@ footer
 
 //ROLL TEMPLATE
   =============================
-include src/pug/rolltemplate
+//include src/pug/rolltemplate.pug
+
 
 //SHEETWORKERS
   =============================
-include src/pug/sheetworkers
+script(type="text/worker")
+  include src/pug/sheetworkers.js
