--- a/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/rolltemplate.pug
@@ -1,23 +1,17 @@
 <!-- ROLL TEMPLATE
    ============================= -->
-	<div class="rolltemplates">
-		<rolltemplate class="sheet-rolltemplate-rolls">
-		 	<!--- Display a header on the template --->
-    		<div class="sheet-template-header">
-    			{{#header}}{{header}}{{/header}}
-    		</div>
-    		<!--- Display the dice roll in the template --->
-	    	<div class="sheet-template-body">
-	    		{{#dice}}
-	    			<div class="sheet-template-row">{{dice}}</div>
-	    		{{/dice}}
-	    		<!--- Display a description. This is great for text included with a roll --->
-		    	{{#desc}}
-		    		<div class="sheet-template-row">
-		    			<span class="sheet-template-desc">
-		    			</span>
-		    		</div>
-	    		{{/desc}}
-	    	</div>
-		</rolltemplate>
-	</div>
+.rolltemplates
+  rolltemplate.sheet-rolltemplate-rolls
+    // - Display a header on the template -
+    .sheet-template-header
+      | {{#header}}{{header}}{{/header}}
+    // - Display the dice roll in the template -
+    .sheet-template-body
+      | {{#dice}}
+      .sheet-template-row {{dice}}
+      | {{/dice}}
+      // - Display a description. This is great for text included with a roll -
+      | {{#desc}}
+      .sheet-template-row
+        span.sheet-template-desc
+      | {{/desc}}
